# Nexa

./: .gitignore  ARCHITECTURE.md  EXECUTION_EVENTS.jsonl  OBSERVABILITY.jsonl  README.md  ROADMAP.md  _request.md  alembic.ini  delete_legacy_nex_contract_leaves.ps1  hyper-ai-main-stable.bundle  hyper-ai_policy-layer-stable.bundle  nexa.py  pyproject.toml  requirements.txt  run_a.json  run_b.json  sample_claude_response.txt
.github/: copilot-instructions.md
.venv311/: pyvenv.cfg
alembic/: env.py
baseline/: BASELINE_G1_OUTPUT.json  BASELINE_HISTORY.jsonl  BASELINE_HISTORY.md  BASELINE_LAST_DIFF.json  BASELINE_PACKET.md  BASELINE_PROMOTION_LOG.json  PIC.md
docs/: ARCHITECTURE.md  ARCHITECTURE_CONSTITUTION.md  BLUEPRINT.md  CLAUDE_GUIDE.md  CLAUDE_MASTER_PROMPT.md  CODING_PLAN.md  CONCEPTS.md  CONTRIBUTING.md  DEVELOPMENT.md  FOUNDATION_MAP.md  FOUNDATION_RULES.md  GLOSSARY.md  INDEX.md  NEXA_FOR_AI.md  NEXA_PRINCIPLES.md  NEXA_SYSTEM_MAP.md  PLUGIN_SYSTEM.md  PROJECT_SCOPE.md  PROVIDER_SYSTEM.md  README.md  ROADMAP.md  RUNTIME_MODEL.md  STRATEGY.md  TRACKER.md  VISION.md  미확인 827138.crdownload
examples/: 00_user_request.md  99_regression_requests - 복사본.md  99_regression_requests.md  example_story_pipeline.nex  hello_world.nex
legacy_prompts/: __init__.py  prompt_spec.py
nexa/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: build_spec_registry.py  check_spec_consistency.py  run_pipeline.py  standardize_spec_metadata.py  start_worker.py  update_baseline.py
src/: __init__.py  fastapi_binding.py  http_route_surface.py  integration.py  public_surface_registry.py
src/engine/: cli.py  (+55 more)
tests/: conftest.py  test_alignment_engine.py  test_audit_pack_export.py  test_audit_replay.py  test_blueprint_foundation_sync_contract.py  test_change_signal_extractor.py  test_circuit_runner_governance.py  test_claude_dev_loop.py  test_cli_design_command.py  (+374 more)
(+1376 files in other folders)
